2007-03-26  Stefan Jahn  <stefan@lkcc.org>

	* qucsveri: New digital simulation wrapper for Icarus
	verilog added.

	* schematic_file.cpp (prepareNetlist): Started to implement
	Verilog HDL interface.

2007-03-22  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/rect3ddiagram.cpp, diagrams/psdiagram.cpp,
	diagrams/polardiagram.cpp, diagrams/rectdiagram.cpp,
	diagrams/smithdiagram.cpp: Including <ieeefp.h> when available.
	Fix for finite() function on Solaris.

2007-03-18  Stefan Jahn  <stefan@lkcc.org>

	* qucs_fr.ts: Updated french translations.  Thanks to Vincent!

2007-03-17  Stefan Jahn  <stefan@lkcc.org>

	* Makefile.am (%.qm): Also renamed cz -> cs.  Thanks Marek
	for pointing this out!

	* dialogs/qucssettingsdialog.cpp (QucsSettingsDialog): Renamed
	cz -> cs for the Czech translations.

2007-03-13  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug of disappearing elements at moving and multiple clicks
	* fixed crash when double-clicking diagrams with markers

2007-03-13  Stefan Jahn  <stefan@lkcc.org>

	* qucs_ru.ts: Updated Russian translations.

	* qucs_it.ts: Updated Italian translations.

2007-03-12  Stefan Jahn  <stefan@lkcc.org>

	* qucs_init.cpp (initActions): Made icon texts and some status
	bar tips translatable.  Thanks Igor for pointing this out.

2007-03-11  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug in selecting ellipse arc

2007-03-08  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug loading old schematics with diodes
	* fixed bug loading FBH HBT

2007-03-03  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* set marker painting precisely
	* fixed bug in painting diagram selection frame
	* added diode property: Ikf

2007-02-24  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* marker pointer with precize graph position at zoom >1
	* fixed bug setting marker on 2D graph in 3D diagram
	* fixed bug with nan values in diagrams