@@ -1,3 +1,9 @@
+2007-03-28  Stefan Jahn  <stefan@lkcc.org>
+
+	* d_flipflop.cpp (verilogCode): Fixed Verilog code of
+	D-flipflop.  Is working now, can be used as template for
+	other flipflops.
+
 2007-03-26  Stefan Jahn  <stefan@lkcc.org>
 
 	* digi_sim.cpp (Digi_Sim): Can select between VHDL and Verilog
