@@ -1,3 +1,12 @@
+2007-03-28  Stefan Jahn  <stefan@lkcc.org>
+
+	* schematic_file.cpp (createNetlist): Fixed a bug in
+	determining the simulation time of digital simulations
+	occurring when there are other disabled simulations
+	placed on the schematic.
+	(createSubNetlist): Implemented subcircuit modules for
+	Verilog simulations.
+
 2007-03-26  Stefan Jahn  <stefan@lkcc.org>
 
 	* qucsveri: New digital simulation wrapper for Icarus
